src/test/ui/async-await/issues/issue-62097.stderr
error[E0759]: `self` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/issue-62097.rs:12:31
   |
LL |     pub async fn run_dummy_fn(&self) {
   |                               ^^^^^ this data with an anonymous lifetime `'_`...
LL |         foo(|| self.bar()).await;
   |         --- ...is required to live as long as `'static` here...
   |
note: ...and is captured here
  --> $DIR/issue-62097.rs:13:9
   |
LL |         foo(|| self.bar()).await;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
note: `'static` lifetime requirement introduced by this trait bound
  --> $DIR/issue-62097.rs:4:19
   |
LL |     F: FnOnce() + 'static
   |                   ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
